--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-native-wagmi-charts": "^2.5.2",
     "react-native-web": "~0.19.10",
     "react-native-svg": "15.2.0",
-    "@react-native-picker/picker": "2.7.5"
+    "@react-native-picker/picker": "2.7.5",
+    "expo-updates": "~0.25.20"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
